--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.chainreactapp"
-  android:versionCode="1"
-  android:versionName="1.0">
+    package="com.chainreactapp">
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,10 +11,6 @@
   <uses-permission android:name="${applicationId}.permission.C2D_MESSAGE" />
   <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-
-  <uses-sdk
-    android:minSdkVersion="16"
-    android:targetSdkVersion="23" />
 
   <application
     android:name=".MainApplication"
