--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "mobile-center-crashes": "^0.4.0",
     "querystringify": "1.0.0",
     "ramda": "0.24.1",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.45.1",
+    "react": "16.4.1",
+    "react-native": "0.56.0",
     "react-native-animatable": "1.2.2",
     "react-native-blur": "^3.0.0-alpha",
     "react-native-code-push": "^2.1.0-beta",
