--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,13 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+        google()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        // classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +22,7 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
+        google()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
@@ -32,9 +35,42 @@ allprojects {
 }
 
 ext {
-    buildToolsVersion = "26.0.3"
-    minSdkVersion = 16
-    compileSdkVersion = 26
-    targetSdkVersion = 26
-    supportLibVersion = "26.1.0"
+    buildToolsVersion = "27.0.3"
+    minSdkVersion = 19
+    compileSdkVersion = 27
+    targetSdkVersion = 27
+    supportLibVersion = "27.1.1"
 }
+
+// https://github.com/oblador/react-native-keychain/issues/68#issuecomment-304836725
+subprojects {
+    afterEvaluate {project ->
+        if (project.hasProperty("android")) {
+            android {
+                compileSdkVersion 27
+                buildToolsVersion '27.0.3'
+                supportLibVersion = "27.1.1"
+            }
+        }
+    }
+}
+// https://github.com/react-native-community/react-native-linear-gradient/commit/f983d4d325e80255a03fbe35f11887bbf30d4dce
+// ext {
+//     buildToolsVersion = "27.0.3"
+//     minSdkVersion = 19
+//     compileSdkVersion = 27
+//     targetSdkVersion = 27
+//     supportLibVersion = "27.1.1"
+// }
+
+// subprojects {
+//     afterEvaluate {project ->
+//         if (project.hasProperty("android")) {
+//             android {
+//                 compileSdkVersion 27
+//                 buildToolsVersion '27.0.3'
+//                 supportLibVersion = "27.1.1"
+//             }
+//         }
+//     }
+// }
