--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     "tryRelease": "react-native run-ios --configuration Release",
-    "bundle:ios": "react-native bundle --entry-file index.ios.js --platform ios --dev false --reset-cache --bundle-output ./ios/main.jsbundle --assets-dest ./ios/release/main.jsbundle",
+    "bundle:ios": "react-native bundle --entry-file index.js --platform ios --dev false --reset-cache --bundle-output ./ios/main.jsbundle --assets-dest ./ios/release/main.jsbundle",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
     "clean:android": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "newclear": "rm -rf $TMPDIR/react-* && watchman watch-del-all && rm -rf ios/build && rm -rf node_modules/ && npm cache clean && npm i",
@@ -47,20 +47,20 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-animatable": "1.2.2",
-    "react-native-blur": "^3.0.0-alpha",
-    "react-native-code-push": "^2.1.0-beta",
-    "react-native-config": "0.4.2",
-    "react-native-device-info": "^0.10.0",
+    "react-native-blur": "^3.2.2",
+    "react-native-code-push": "^5.4.2",
+    "react-native-config": "^0.11.5",
+    "react-native-device-info": "^0.22.5",
     "react-native-fade-in-image": "^1.0.3",
     "react-native-i18n": "^1.0.0",
-    "react-native-linear-gradient": "https://github.com/react-native-community/react-native-linear-gradient.git",
-    "react-native-maps": "0.15.2",
-    "react-native-push-notification": "^3.0.0",
-    "react-native-smart-splash-screen": "^2.3.4",
+    "react-native-linear-gradient": "^2.4.2",
+    "react-native-maps": "^0.21.0",
+    "react-native-push-notification": "^3.1.1",
+    "react-native-smart-splash-screen": "^2.3.5",
     "react-native-sound": "^0.10.3",
     "react-native-statusbar-alert": "^0.2.0",
-    "react-native-vector-icons": "^4.0.1",
-    "react-native-video": "^1.0.0",
+    "react-native-vector-icons": "^5.0.0",
+    "react-native-video": "^3.2.0",
     "react-navigation": "^1.0.0-beta.10",
     "react-redux": "^5.0.5",
     "reactotron-react-native": "^1.11.1",
